New features, fixes in version 1.0.3

	The implementation of the MAIL action tag for monitor thresholds
	is complete. New VarBinds added for SNMP trap monitor thresholds.
	Added a new monitor threshold type, quotient. Revised and extended
	monitor threshold documentation.

	A new config option, show-path, was added that allows the
	display of the current path in the config tree with clickable
	links for easier backtracking. Defaults to "no".

	Support for SNMP version 2, as well as for the additional
	options that SNMP_Session now offers has been added to
	the sample-config/Defaults file. For existing installations,
	it is recommended you install the sample-config/Defaults into
	your cricket-config and merge your local changes in.
	If you do this, or if you install Cricket from scratch, you
	should use SNMP_Session version 0.80 or higher (it is
	recommended to upgrade SNMP_Session regardless, there were
	some rare but hard to diagnose bugs in versions prior to 0.78).
	The defaults are
		snmp-timeout = 2.0
		snmp-retries = 5
		snmp-version = 1
	If you know what you're doing, you could reduce the number of
	retries or the timeout, but this is not recommended. Existing
	Cricket users should first evaluate the effectiveness of
	the dead-SNMP-host detection that's new with 1.0.3 before
	mucking with the SNMP settings.

	Support for Windows Management Instrumentation on the Windows
	2000 Platform. Refer to doc/win2kwmi.html.

	The SNMP code now has intelligence built in to quickly
	skip a device that is down or otherwise doesn't respond.
	After two successive timeouts from the same host in one
	collector run, that host is considered down and subsequent
	targets on that device will be marked 'U' without checking.
	This avoids the syndrome where one device with a lot of
	targets can significantly slow down your collection
	process. If you need, you can increase MAXTRIES in
	lib/snmpUtils.pm. [patch #402839]

	The top level Defaults now sets rrd-min to 0 rather than